--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,10 +1,6 @@
 <html>
 <body>
-    <a href="/" >Home</a>
-    <a href="about" >About</a>
-    <a href="contact" >Contact</a>
-    <a href="books" >Books</a>
-    <a href="authors" >Authors</a>
+    <%- include('navbar', {links: links}) %>
     <h1>About</h1>
 </body>
 </html>
